# trivia-app

./: .gitignore  CMakeLists.txt  README.md
include/: textBox.h  window.h
src/: main.c  textBox.c  window.c
